Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/CastCrash.out
CastCrash.java:19:22: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: cast.crash.LI, cast.crash.SN)
1 error
